[gd_scene load_steps=4 format=3 uid="uid://dh3b7syg66smq"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_fb284"]
[ext_resource type="PackedScene" uid="uid://f0icdjyyta0h" path="res://scenes/settings.tscn" id="1_o3324"]
[ext_resource type="AudioStream" uid="uid://dhj6nijgry0uq" path="res://assets/audio/Alfred Cortot - Chopin_ Ballade No. 1 in G Minor, Op. 23..mp3" id="1_rvnpf"]

[node name="Menu" type="Node2D"]
position = Vector2(1, 1)
script = ExtResource("1_fb284")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
color = Color(0.168167, 0.0533986, 0.011345, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Play"
flat = true

[node name="SettingsButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Settings
"
flat = true

[node name="Settings" parent="." instance=ExtResource("1_o3324")]
unique_name_in_owner = true
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(260, -50)
stream = ExtResource("1_rvnpf")
autoplay = true
bus = &"Menu"

[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
